--- a/css/style.css
+++ b/css/style.css
@@ -83,15 +83,17 @@ body{
   border: none;
 }
 
+.container{
+  width: 1160px;
+  margin: 0 auto;
+}
+
 /* ---- header ---- */
 
 .header{
   position: relative;
-  width: 1160px;
   height: 300px;
-  margin: 0 auto;
   margin-top: 40px;
-
   background-color: #f7e296;
 }
 
@@ -274,31 +276,77 @@ ul.basket-navigation li{
 
 /* ---- slider ---- */
 
+.slider-popular{
+  position: relative;
+  margin-top: -110px;
+  margin-bottom: 110px;
+}
+
+.slider-popular-item{
+  display: none;
+}
+
+.slider-popular-item.active{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.slider-popular-item img{
+  z-index: 1;
+  padding-left: 25px;
+}
+
+.slider-popular-item .item-content{
+  position: relative;
+
+  width: 510px;
+  height: 486px;
+}
+
 .slider-popular .slide-number{
+  position: absolute;
+  top: -15px;
+  right: -15px;
+  z-index: 1;
+
   font-family: Gilroy;
   font-weight: 700;
   font-size: 179px;
   line-height: 179px;
   letter-spacing: 0.36px;
-
-  color: lightblue;  /* Временно, до сеток*/
+  color: #ffffff;
 }
 
 .slider-popular h3{
+  margin-top: 77px;
+  margin-bottom: 20px;
+  z-index: 2;
+
   font-family: Gilroy;
   font-weight: 800;
   font-size: 47px;
   line-height: 56px;
-  letter-spacing: 0.47px;
+  letter-spacing: 0.7px;
   color: #000000;
 }
 
 .slider-popular p{
+  margin-bottom: 50px;
+
   letter-spacing: 0.15px;
   color: #464646;
 }
 
+.slider-popular-item dl{
+  display: flex;
+  flex-direction: row;
+  margin-top: 50px;
+}
+
 .slider-popular dt{
+  margin-right: 65px;
+
   font-family: Gilroy;
   font-weight: 300;
   font-size: 36px;
@@ -308,6 +356,7 @@ ul.basket-navigation li{
 
 .slider-popular dd{
   margin: 0;
+  margin-top: 10px;
 
   color: #464646;
   font-size: 13px;
@@ -315,11 +364,26 @@ ul.basket-navigation li{
   letter-spacing: 0.13px;
 }
 
+.slider-popular-navigation{
+  position: absolute;
+  top: 320px;
+  right: 70px;
+}
 /* ---- popular category ---- */
 
 .popular-category ul{
-  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 190px;
   padding: 0;
+
+  list-style: none;
+}
+
+.popular-category li{
+  width: 160px;
+  height: 240px;
 }
 
 .popular-category p{
@@ -335,6 +399,57 @@ ul.basket-navigation li{
 }
 
 /* ---- services ---- */
+
+.slider-services-background{
+  height: 290px;
+  background-color: #e5e5e5;
+}
+
+.slider-services{
+  display: flex;
+  flex-direction: row;
+}
+
+.slider-services-navigation{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  margin-top: -90px;
+  width: 280px;
+  height: 320px;
+
+  border-right: 7px solid #000000;
+}
+
+.slider-services-navigation button{
+  background-color: transparent;
+  margin-bottom: 30px;
+}
+
+.slider-services-navigation button:active{
+  background-color: #000000;
+  color: #f7e184;
+}
+
+.slider-services-navigation button.active{
+  background-color: #000000;
+  color: #f7e184;
+}
+
+.slide-services-items{
+  margin-top: -80px;
+  margin-left: 115px;
+}
+
+.slider-services .slider-services-item{
+  display: none;
+}
+
+.slider-services .slider-services-item.active{
+  display: block;
+  width: 430px;
+}
 
 .slider-services-item h3{
   font-family: Gilroy;
@@ -355,8 +470,62 @@ ul.basket-navigation li{
 
 /* ---- partners ---- */
 
+.partners{
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
 .partners ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
   list-style: none;
+}
+
+a.partners-link-dji:hover{
+  display: block;
+  width: 260px;
+  height: 100px;
+  background-image: url(../img/logo-1.png);
+}
+
+a.partners-link-dji:hover > img{
+  opacity: 0;
+}
+
+a.partners-link-spgadgets:hover{
+  display: block;
+  width: 260px;
+  height: 100px;
+  background-image: url(../img/logo-2.png);
+}
+
+a.partners-link-spgadgets:hover > img{
+  opacity: 0;
+}
+
+a.partners-link-gopro:hover{
+  display: block;
+  width: 260px;
+  height: 100px;
+  background-image: url(../img/logo-3.png);
+}
+
+a.partners-link-gopro:hover > img{
+  opacity: 0;
+}
+
+a.partners-link-vive:hover{
+  display: block;
+  width: 260px;
+  height: 100px;
+  background-image: url(../img/logo-4.png);
+}
+
+a.partners-link-vive:hover > img{
+  opacity: 0;
 }
 
 /* ---- info ---- */
@@ -366,8 +535,6 @@ ul.basket-navigation li{
   flex-direction: row;
   justify-content: space-between;
 
-  width: 1160px;
-  margin: 0 auto;
   margin-bottom: 95px;
 }
 
@@ -413,11 +580,6 @@ ul.basket-navigation li{
 
   background-color: #464646;
   color: #ffffff;
-}
-
-.footer .footer-wrapper{
-  width: 1160px;
-  margin: 0 auto;
 }
 
 .footer .footer-logo{
@@ -539,10 +701,13 @@ ul.basket-navigation li{
 
 /* ---- catalog page ---- */
 
+.inner-header .logo{
+  width: 163px;
+  height: 35px;
+}
+
 .catalog .title-wrapper{
-  width: 1160px;
   padding-left: 60px;
-  margin: 0 auto;
   margin-bottom: 50px;
 }
 
@@ -575,9 +740,6 @@ ul.basket-navigation li{
 .main-wrap{
   display: flex;
   flex-direction: row;
-
-  width: 1160px;
-  margin: 0 auto;
 }
 
 .filter{
@@ -587,6 +749,7 @@ ul.basket-navigation li{
 
 .filter h2{
   margin: 0;
+
 
   font-family: 'Gilroy', Arial, sans-serif;
   font-size: 16px;
@@ -621,6 +784,7 @@ ul.basket-navigation li{
 }
 
 .filter button[type="submit"]{
+  display: block;
   margin: 0 auto;
 }
 
@@ -632,15 +796,31 @@ ul.basket-navigation li{
   list-style: none;
 }
 
+.sort{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-left: 80px;
+}
+
+.sort .sort-wrapper{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .sort h2{
+  display: block;
+  margin: 0;
+
   font-family: Gilroy;
   font-weight: 800;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 3.5px;
   text-transform: uppercase;
-
-  margin: 0;
 }
 
 .sort button{
@@ -717,6 +897,39 @@ ul.basket-navigation li{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.catalog-navigation{
+  width: 760px;
+  height: 70px;
+  margin-left: 80px;
+  margin-bottom: 80px;
+  padding: 0 30px;
+  line-height: 70px;
+
+  background-color: #ebebeb;
+}
+
+.catalog-navigation .outer-catalog-navigation{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  padding: 0;
+  list-style: none;
+}
+
+.catalog-navigation .inner-catalog-navigation{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  padding: 0;
+  list-style: none;
+}
+
+.inner-catalog-navigation li{
+  margin-right: 20px;
 }
 
 .catalog-navigation a{
