--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,6 @@ body{
 
 .header .header-wrapper{
   display: flex;
-  flex-direction: row;
   width: 1045px;
   margin: 0 auto;
   padding-bottom: 37px;
@@ -121,7 +120,6 @@ body{
 
 .header ul{
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   margin: 0;
   list-style: none;
@@ -288,8 +286,8 @@ ul.basket-navigation li{
 
 .slider-popular-item.active{
   display: flex;
-  flex-direction: row;
   justify-content: space-around;
+  align-items: flex-start;
 }
 
 .slider-popular-item img{
@@ -319,6 +317,7 @@ ul.basket-navigation li{
 }
 
 .slider-popular h3{
+  position: relative;
   margin-top: 77px;
   margin-bottom: 20px;
   z-index: 2;
@@ -340,7 +339,6 @@ ul.basket-navigation li{
 
 .slider-popular-item dl{
   display: flex;
-  flex-direction: row;
   margin-top: 50px;
 }
 
@@ -366,15 +364,14 @@ ul.basket-navigation li{
 
 .slider-popular-navigation{
   position: absolute;
-  top: 320px;
+  bottom: 145px;
   right: 70px;
 }
 /* ---- popular category ---- */
 
 .popular-category ul{
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-wrap: wrap;
   margin-bottom: 190px;
   padding: 0;
 
@@ -384,6 +381,7 @@ ul.basket-navigation li{
 .popular-category li{
   width: 160px;
   height: 240px;
+  margin-right: 30px;
 }
 
 .popular-category p{
@@ -407,7 +405,6 @@ ul.basket-navigation li{
 
 .slider-services{
   display: flex;
-  flex-direction: row;
 }
 
 .slider-services-navigation{
@@ -417,7 +414,7 @@ ul.basket-navigation li{
 
   margin-top: -90px;
   width: 280px;
-  height: 320px;
+  min-height: 320px;
 
   border-right: 7px solid #000000;
 }
@@ -477,62 +474,36 @@ ul.basket-navigation li{
 
 .partners ul{
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
 
   list-style: none;
 }
 
-a.partners-link-dji:hover{
+.partners li{
+  margin-right: 20px;
+}
+
+.partners .partners-link{
   display: block;
   width: 260px;
   height: 100px;
-  background-image: url(../img/logo-1.png);
+
+  filter: grayscale(1);
+  opacity: 0.2;
 }
 
-a.partners-link-dji:hover > img{
-  opacity: 0;
+.partners .partners-link:hover{
+  opacity: 1;
+  filter: grayscale(0);
 }
 
-a.partners-link-spgadgets:hover{
-  display: block;
-  width: 260px;
-  height: 100px;
-  background-image: url(../img/logo-2.png);
-}
 
-a.partners-link-spgadgets:hover > img{
-  opacity: 0;
-}
-
-a.partners-link-gopro:hover{
-  display: block;
-  width: 260px;
-  height: 100px;
-  background-image: url(../img/logo-3.png);
-}
-
-a.partners-link-gopro:hover > img{
-  opacity: 0;
-}
-
-a.partners-link-vive:hover{
-  display: block;
-  width: 260px;
-  height: 100px;
-  background-image: url(../img/logo-4.png);
-}
-
-a.partners-link-vive:hover > img{
-  opacity: 0;
-}
 
 /* ---- info ---- */
 
 .main-wrapper{
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
 
   margin-bottom: 95px;
@@ -604,7 +575,7 @@ a.partners-link-vive:hover > img{
 
 .footer-user-navigation{
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   margin-bottom: 50px;
@@ -620,14 +591,13 @@ a.partners-link-vive:hover > img{
 
 .user-navigation-wrapper{
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 
 .user-navigation-wrapper ul{
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   margin: 0;
@@ -639,7 +609,6 @@ a.partners-link-vive:hover > img{
 
 .footer-site-navigation{
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
 
   margin-bottom: 70px;
@@ -647,7 +616,7 @@ a.partners-link-vive:hover > img{
 
 .footer-site-navigation ul{
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   width: 430px;
@@ -670,14 +639,13 @@ a.partners-link-vive:hover > img{
 
 .footer-social{
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 
 .footer-social .social-links{
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-between;
 
   margin: 0;
@@ -721,7 +689,6 @@ a.partners-link-vive:hover > img{
 
 .catalog .breadcrumb{
   display: flex;
-  flex-direction: row;
 
   list-style: none;
   padding: 0;
@@ -739,7 +706,6 @@ a.partners-link-vive:hover > img{
 
 .main-wrap{
   display: flex;
-  flex-direction: row;
 }
 
 .filter{
@@ -798,7 +764,6 @@ a.partners-link-vive:hover > img{
 
 .sort{
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   margin-left: 80px;
@@ -806,7 +771,6 @@ a.partners-link-vive:hover > img{
 
 .sort .sort-wrapper{
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
@@ -883,7 +847,6 @@ a.partners-link-vive:hover > img{
 
 .items-list{
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
 }
 
@@ -895,7 +858,6 @@ a.partners-link-vive:hover > img{
 
 .items-list .item-description{
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
 }
 
@@ -912,7 +874,6 @@ a.partners-link-vive:hover > img{
 
 .catalog-navigation .outer-catalog-navigation{
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
 
   padding: 0;
@@ -921,7 +882,6 @@ a.partners-link-vive:hover > img{
 
 .catalog-navigation .inner-catalog-navigation{
   display: flex;
-  flex-direction: row;
   justify-content: space-between;
 
   padding: 0;
