--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,8 @@ body{
   position: relative;
   display: block;
   border: none;
+  background-color: transparent;
+
   font-family: 'Gilroy', Arial, sans-serif;
   font-size: 18px;
   font-weight: 700;
@@ -85,11 +87,16 @@ body{
 
 .button::before{
   position: absolute;
-  z-index: -1;
   width: 260px;
   height: 8px;
   background-color: #f0c52e;
   content: "";
+  z-index: -1;
+}
+
+.button-box{
+  position: relative;
+  z-index: 1;
 }
 
 .container{
@@ -831,12 +838,98 @@ ul.basket-navigation li{
 }
 
 /* ---- modals ---- */
+
+.close-modal{
+  position: absolute;
+  right: 20px;
+  top: 20px;
+  width: 55px;
+  height: 55px;
+  border: none;
+  border-radius: 50%;
+  background: #f7e296 url("../img/modal-close.svg") no-repeat center center;
+}
+
 .modal-write-us{
   display: none;
+  position: absolute;
+  bottom: -1400px;
+  left: 20%;
+  width: 960px;
+  height: 550px;
+  padding-left: 100px;
+
+  background-color: #ffffff;
+  box-shadow: 2px 2px 15px 0 #040606;
+}
+
+.modal-write-us p{
+  margin: 0;
+  padding: 0;
+}
+
+.modal-write-us label{
+  font-family: 'Gilroy', Arial, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+
+  display: inline-block;
+}
+
+.modal-form-wrap{
+  display: flex;
+  margin-top: 100px;
+}
+
+.modal-form-wrap p{
+  width: 360px;
+  margin-right: 40px;
+  margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-textarea{
+  display: flex;
+  flex-direction: column;
+
+  width: 760px;
+}
+
+.modal-write-us input,
+.modal-write-us textarea{
+  border: none;
+  background-color: #f2f2f2;
+  padding: 20px 30px;
+}
+
+.modal-write-us input{
+  height: 50px;
+}
+
+.modal-write-us button[type="submit"]{
+  margin-top: 55px;
+  padding-left: 35px;
+}
+
+.modal-write-us button[type="submit"]::before{
+  width: 200px;
+  left: 0;
+  top: 7px;
+}
+
+.modal-write-us button[type="submit"]:hover::before{
+  height: 40px;
+  top: -9px;
 }
 
 .modal-map{
   display: none;
+  position: absolute;
+  left: 20%;
+  bottom: -1500px;
+  width: 960px;
 }
 
 /* ---- catalog page ---- */
@@ -1021,17 +1114,23 @@ input[type="radio"]:checked + label.bluetooth-choice-label{
   background: url("../img/radio-on.svg") no-repeat left center;
 }
 
+.filter button[type="submit"]{
+  padding-left: 40px;
+}
+
 .filter button[type="submit"]::before{
   width: 200px;
-  z-index: 0;
+  left: 0;
+  top: 8px;
+}
+
+.filter button[type="submit"]:hover::before{
+  height: 40px;
+  top: -9px;
 }
 
 .inner-wrap{
   width: 66.5%;
-}
-
-.catalog-items ul{
-  list-style: none;
 }
 
 /* ---- Sort ---- */
@@ -1122,6 +1221,10 @@ input[type="radio"]:checked + label.bluetooth-choice-label{
 
 /* ---- Items list ---- */
 
+.catalog-items ul{
+  list-style: none;
+}
+
 .catalog-items .item-title{
   font-family: 'Gilroy', Arial, sans-serif;
   font-size: 18px;
@@ -1143,19 +1246,37 @@ input[type="radio"]:checked + label.bluetooth-choice-label{
   position: relative;
 }
 
-.item:hover > img{
+.item:hover > .item-foto{
   opacity: 0.7;
 }
 
-.catalog-items .to-basket{
-  display: none;
+.catalog-items .button-box{
   position: absolute;
   top: 40%;
   left: 35%;
 }
 
+.button-box:hover + .to-comparison{
+  display: block;
+}
+
+.catalog-items .to-basket{
+  display: none;
+}
+
+.catalog-items .to-basket::before{
+  width: 200px;
+  left: -40px;
+  top: 7px;
+}
+
+.catalog-items .to-basket:hover::before{
+  height: 40px;
+  top: -9px;
+}
+
 .catalog-items .to-basket:hover{
-  display: inline-block;
+  display: block;
 }
 
 .catalog-items .to-basket:active{
@@ -1173,7 +1294,7 @@ input[type="radio"]:checked + label.bluetooth-choice-label{
 }
 
 .catalog-items .to-comparison:hover{
-  display: inline-block;
+  display: block;
   opacity: 1;
 }
 
@@ -1181,9 +1302,13 @@ input[type="radio"]:checked + label.bluetooth-choice-label{
   opacity: 0.2;
 }
 
-.catalog-items img:hover ~ .to-basket,
-.catalog-items img:hover ~ .to-comparison{
-  display: inline-block;
+.item-foto:hover ~ .button-box .to-basket,
+.item-foto:hover ~ .to-comparison{
+  display: block;
+}
+
+.button-box:hover + .to-basket{
+  display: block;
 }
 
 .catalog-items .items-list{
