--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,7 @@ body{
   display: block;
   border: none;
   background-color: transparent;
+  cursor: pointer;
 
   font-family: 'Gilroy', Arial, sans-serif;
   font-size: 18px;
@@ -125,6 +126,7 @@ body{
   position: absolute;
   top: -18px;
   margin-left: 58px;
+  cursor: pointer;
 }
 
 .header nav{
@@ -416,6 +418,7 @@ ul.basket-navigation li{
 
 .slider-popular a.button{
   padding-left: 40px;
+  width: 220px;
 }
 
 .slider-popular a.button::before{
@@ -465,6 +468,7 @@ ul.basket-navigation li{
   border-radius: 50%;
   width: 12px;
   height: 12px;
+  cursor: pointer;
   background: url("../img/slider-button-empty.svg") no-repeat center center;
 }
 
@@ -505,30 +509,53 @@ ul.basket-navigation li{
   width: 160px;
   height: 160px;
   background-color: #f7e296;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popular-category div:hover{
+  background-color: #f0c52e;
+}
+
+.popular-category-link svg{
+  fill: #363636;
+}
+
+.popular-category div:active svg{
+  opacity: 0.3;
 }
 
 .popular-vr{
-  background: url("../img/popular-1.svg") no-repeat center center;
+
+  width: 97px;
+  height: 55px;
 }
 
 .popular-monopods{
-  background: url("../img/popular-2.svg") no-repeat center center;
+  width: 86px;
+  height: 117px;
+  align-self: flex-end;
 }
 
 .popular-camers{
-  background: url("../img/popular-3.svg") no-repeat center center;
+  width: 71px;
+  height: 87px;
 }
 
 .popular-bangles{
-  background: url("../img/popular-4.svg") no-repeat center center;
+  width: 107px;
+  height: 65px;
 }
 
 .popular-clocks{
-  background: url("../img/popular-5.svg") no-repeat center center;
+  width: 56px;
+  height: 98px;
 }
 
 .popular-quadrocopters{
-  background: url("../img/popular-6.svg") no-repeat center center;
+  width: 132px;
+  height: 69px;
 }
 
 /* ---- services ---- */
@@ -839,6 +866,7 @@ ul.basket-navigation li{
 
 .footer .footer-logo{
   fill: #ffc600;
+  cursor: pointer;
 }
 
 .footer a:hover{
@@ -991,24 +1019,57 @@ ul.basket-navigation li{
   position: absolute;
   right: 20px;
   top: 20px;
+  z-index: 4;
   width: 55px;
   height: 55px;
   border: none;
   border-radius: 50%;
-  background: #f7e296 url("../img/modal-close.svg") no-repeat center center;
+  background: #f7e296;
+  cursor: pointer;
+}
+
+.close-modal::before,
+.close-modal::after{
+  position: absolute;
+  top: 25px;
+  left: 13px;
+  width: 30px;
+  height: 3px;
+  background-color: #ffffff;
+  content: "";
+}
+
+.close-modal::before{
+  transform: rotate(45deg);
+}
+
+.close-modal::after{
+  transform: rotate(-45deg);
+}
+
+.close-modal:hover{
+  background-color: #f0c52e;
+}
+
+.close-modal:active{
+  opacity: 0.3;
+}
+
+.modal{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 3;
+
+  background-color: #ffffff;
+  box-shadow: 2px 2px 15px 0 #040606;
 }
 
 .modal-write-us{
   display: none;
-  position: absolute;
-  bottom: -1400px;
-  left: 20%;
   width: 960px;
-  height: 550px;
   padding-left: 100px;
-
-  background-color: #ffffff;
-  box-shadow: 2px 2px 15px 0 #040606;
 }
 
 .modal-write-us p{
@@ -1052,12 +1113,29 @@ ul.basket-navigation li{
   padding: 20px 30px;
 }
 
+.modal-write-us input:hover,
+.modal-write-us textarea:hover{
+  background-color: #ebebeb;
+}
+
+.modal-write-us input:focus,
+.modal-write-us textarea:focus{
+  background-color: #ffffff;
+  outline: 3px solid #f7e296;
+}
+
+.modal-write-us input:invalid,
+.modal-write-us textarea:invalid{
+  background-color: #f6dada;
+}
+
 .modal-write-us input{
   height: 50px;
 }
 
 .modal-write-us button[type="submit"]{
   margin-top: 55px;
+  margin-bottom: 90px;
   padding-left: 35px;
 }
 
@@ -1074,10 +1152,8 @@ ul.basket-navigation li{
 
 .modal-map{
   display: none;
-  position: absolute;
-  left: 20%;
-  bottom: -1500px;
   width: 960px;
+  height: 560px;
 }
 
 /* ---- catalog page ---- */
@@ -1255,6 +1331,14 @@ header.inner-header{
   border: none;
   border-radius: 50%;
   background-color: #ffffff;
+  cursor: pointer;
+}
+
+.range-wrapper button:active{
+  width: 22px;
+  height: 22px;
+  top: 54px;
+  left: -11px;
 }
 
 .range-wrapper button::before{
@@ -1306,12 +1390,25 @@ header.inner-header{
   padding-left: 40px;
   margin-bottom: 20px;
   background: url("../img/checkbox-off.svg") no-repeat left center;
+  cursor: pointer;
 
   line-height: 23px;
 }
 
+.color-list label:hover{
+  opacity: 0.6;
+}
+
+.color-list label:active{
+  opacity: 1;
+}
+
 input[type="checkbox"]:checked + label.color-list-label{
   background: url("../img/checkbox-on.svg") no-repeat left center;
+}
+
+input[type="checkbox"]:disabled + label.color-list-label{
+  opacity: 0.25;
 }
 
 .bluetooth-choice input[type="radio"]{
@@ -1324,12 +1421,24 @@ input[type="checkbox"]:checked + label.color-list-label{
   padding-left: 40px;
   margin-bottom: 20px;
   background: url("../img/radio-off.svg") no-repeat left center;
-
+  cursor: pointer;
   line-height: 25px;
+}
+
+.bluetooth-choice label:hover{
+  opacity: 0.6;
+}
+
+.bluetooth-choice label:active{
+  opacity: 1;
 }
 
 input[type="radio"]:checked + label.bluetooth-choice-label{
   background: url("../img/radio-on.svg") no-repeat left center;
+}
+
+input[type="radio"]:disabled + label.bluetooth-choice-label{
+  opacity: 0.25;
 }
 
 .filter button[type="submit"]{
@@ -1427,10 +1536,18 @@ input[type="radio"]:checked + label.bluetooth-choice-label{
   font-size: 14px;
   line-height: 18px;
   color: #000000;
-
+  cursor: pointer;
   opacity: 0.3;
   border: none;
   background-color: transparent;
+}
+
+.sort button:hover{
+  opacity: 0.6;
+}
+
+.sort button:active{
+  opacity: 1;
 }
 
 .sort button.active{
@@ -1441,6 +1558,7 @@ input[type="radio"]:checked + label.bluetooth-choice-label{
   display: inline-block;
   width: 11px;
   height: 10px;
+  cursor: pointer;
 }
 
 .sort-direction button.active{
