--- a/css/style.css
+++ b/css/style.css
@@ -130,11 +130,12 @@ body{
 }
 
 .header nav{
-  padding-top: 45px;
+  padding-top: 43px;
 }
 
 .header .header-wrapper{
   display: flex;
+  flex-wrap: wrap;
   width: 1045px;
   margin: 0 auto;
   padding-bottom: 37px;
@@ -142,7 +143,7 @@ body{
 
 .header ul{
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
   margin: 0;
   list-style: none;
 }
@@ -161,7 +162,7 @@ body{
 
 .header form.search{
   position: relative;
-  margin-left: 3px;
+  flex-grow: 3;
 }
 
 .search input[type="search"]{
@@ -169,10 +170,10 @@ body{
   line-height: 30px;
   letter-spacing: 0.15px;
 
-  padding-left: 36px;
+  padding-left: 39px;
   border: 0;
   background-color: transparent;
-  background: url("../img/search.svg") no-repeat 0 center;
+  background: url("../img/search.svg") no-repeat 4px center;
 
   opacity: 0.3;
 }
@@ -217,12 +218,12 @@ body{
 }
 
 .header ul.user-navigation{
-  margin-left: 344px;
   padding-left: 0;
+  flex-grow: 1.7;
 }
 
 .inner-header ul.user-navigation{
-  width: 230px;
+  min-width: 230px;
 }
 
 .user-navigation .user-login-link{
@@ -231,12 +232,16 @@ body{
 }
 
 .header ul.basket-navigation{
-  margin-left: 215px;
   padding-left: 0;
+  flex-grow: 0.4;
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 ul.basket-navigation li{
-  margin-right: 43px;
+  margin: 0;
 }
 
 .basket-navigation .comparison-link{
@@ -250,21 +255,29 @@ ul.basket-navigation li{
 }
 
 .header .site-navigation{
-  line-height: 0;
+  display: flex;
+  flex-wrap: wrap;
+  width: 1045px;
   padding: 0;
+  margin: 0 auto;
+
+  line-height: 0;
 }
 
-.site-navigation > li:first-child{
-  margin-right: 291px;
+.site-navigation li:nth-child(1n){
+  flex-grow: 1.1;
 }
 
-.site-navigation > li:nth-child(2){
-  margin-right: 35px;
+.site-navigation li:nth-child(2n){
+  flex-grow: 0.35;
 }
 
-.site-navigation > li:last-child{
-  margin-left: 109px;
-  margin-right: 0;
+.site-navigation li:first-child{
+  flex-grow: 3;
+}
+
+.site-navigation li:last-child{
+  flex-grow: 0;
 }
 
 .site-navigation a{
@@ -345,7 +358,7 @@ ul.basket-navigation li{
 .slider-popular{
   position: relative;
   margin-top: -110px;
-  margin-bottom: 110px;
+  margin-bottom: 99px;
 }
 
 .slider-popular-item{
@@ -360,20 +373,20 @@ ul.basket-navigation li{
 
 .slider-popular-item img{
   z-index: 1;
-  padding-left: 25px;
+  margin-left: 29px;
 }
 
 .slider-popular-item .item-content{
   position: relative;
-
+  padding-left: 6px;
   width: 510px;
-  height: 486px;
+  min-height: 486px;
 }
 
 .slider-popular .slide-number{
   position: absolute;
   top: -15px;
-  right: -15px;
+  right: -10px;
   z-index: 1;
 
   font-family: Gilroy;
@@ -388,7 +401,7 @@ ul.basket-navigation li{
   display: block;
   position: absolute;
   top: 50px;
-  left: -340px;
+  left: -330px;
   width: 100px;
   height: 7px;
   background-color: #ffffff;
@@ -405,19 +418,19 @@ ul.basket-navigation li{
   font-weight: 800;
   font-size: 47px;
   line-height: 56px;
-  letter-spacing: 0.7px;
+  letter-spacing: 0.8px;
   color: #000000;
 }
 
 .slider-popular p{
-  margin-bottom: 50px;
+  margin-bottom: 52px;
 
-  letter-spacing: 0.15px;
+  letter-spacing: 0.22px;
   color: #464646;
 }
 
 .slider-popular a.button{
-  padding-left: 40px;
+  padding-left: 45px;
   width: 220px;
 }
 
@@ -434,12 +447,21 @@ ul.basket-navigation li{
 
 .slider-popular-item dl{
   display: flex;
-  margin-top: 50px;
+  margin-top: 59px;
+}
+
+.slider-popular .definition-item{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-right: 75px;
+}
+
+.slider-popular .definition-item:nth-child(3n){
+  margin-right: 0;
 }
 
 .slider-popular dt{
-  margin-right: 65px;
-
   font-family: Gilroy;
   font-weight: 300;
   font-size: 36px;
@@ -449,7 +471,7 @@ ul.basket-navigation li{
 
 .slider-popular dd{
   margin: 0;
-  margin-top: 10px;
+  margin-top: 7px;
 
   color: #464646;
   font-size: 13px;
@@ -459,8 +481,12 @@ ul.basket-navigation li{
 
 .slider-popular-navigation{
   position: absolute;
-  bottom: 145px;
-  right: 70px;
+  bottom: 154px;
+  right: 84px;
+
+  width: 79px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .slider-popular-navigation .slider-button{
@@ -481,7 +507,8 @@ ul.basket-navigation li{
 .popular-category ul{
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 190px;
+  margin-bottom: 165px;
+  margin-left: -2px;
   padding: 0;
 
   list-style: none;
@@ -489,8 +516,12 @@ ul.basket-navigation li{
 
 .popular-category li{
   width: 160px;
-  height: 240px;
-  margin-right: 30px;
+  min-height: 240px;
+  margin-right: 40px;
+}
+
+.popular-category li:nth-child(6n){
+  margin-right: 0;
 }
 
 .popular-category p{
@@ -508,6 +539,7 @@ ul.basket-navigation li{
 .popular-category div{
   width: 160px;
   height: 160px;
+  margin-bottom: 32px;
   background-color: #f7e296;
   display: flex;
   align-items: center;
@@ -561,7 +593,7 @@ ul.basket-navigation li{
 /* ---- services ---- */
 
 .slider-services-background{
-  height: 290px;
+  min-height: 290px;
   background-color: #e5e5e5;
 }
 
@@ -574,21 +606,22 @@ ul.basket-navigation li{
   flex-direction: column;
   justify-content: center;
 
-  margin-top: -90px;
-  width: 280px;
-  min-height: 320px;
+  padding-top: 35px;
+  margin-top: -105px;
+  margin-bottom: 65px;
+  width: 282px;
+  min-height: 325px;
 
   border-right: 7px solid #000000;
-}
-
-.slider-services .button{
-  line-height: 24px;
 }
 
 .slider-services-navigation .button{
   height: 40px;
   background-color: transparent;
-  margin-bottom: 16px;
+  margin-bottom: 24px;
+
+
+    line-height: 24px;
 }
 
 .slider-services-navigation .button:active{
@@ -610,11 +643,11 @@ ul.basket-navigation li{
 }
 
 .slider-services-navigation .button-delivery{
-  padding-left: 23px;
+  padding-left: 19px;
 }
 
 .slider-services-navigation .button-warranty{
-  padding-left: 25px;
+  padding-left: 24px;
 }
 
 .slider-services-navigation .button-credit{
@@ -642,7 +675,7 @@ ul.basket-navigation li{
 
 .slider-services-items{
   margin-top: -80px;
-  margin-left: 115px;
+  margin-left: 117px;
 }
 
 .slider-services .slider-services-item{
@@ -653,8 +686,8 @@ ul.basket-navigation li{
 .slider-services-delivery::before{
   display: block;
   position: absolute;
-  top: 15px;
-  right: -200px;
+  top: 12px;
+  right: -264px;
   width: 136px;
   height: 164px;
 
@@ -692,23 +725,25 @@ ul.basket-navigation li{
 }
 
 .slider-services-item h3{
+  margin-top: 52px;
+  margin-bottom: 31px;
   font-family: Gilroy;
   font-weight: 800;
   font-size: 47px;
   line-height: 48px;
-  letter-spacing: 0.208444px;
+  letter-spacing: 0.9px;
 }
 
 .slider-services-item p{
-  letter-spacing: 0.15px;
+  letter-spacing: 0.25px;
   color: #464646;
 }
 
 /* ---- partners ---- */
 
 .partners{
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 90px;
+  margin-bottom: 107px;
 }
 
 .partners ul{
@@ -716,11 +751,16 @@ ul.basket-navigation li{
   flex-wrap: wrap;
   align-items: center;
 
+  padding: 0;
   list-style: none;
 }
 
 .partners li{
-  margin-right: 20px;
+  margin-right: 38px;
+}
+
+.partners li:nth-child(4n){
+  margin-right: 0;
 }
 
 .partners .partners-link{
@@ -745,19 +785,21 @@ ul.basket-navigation li{
   display: flex;
   justify-content: space-between;
 
-  margin-bottom: 95px;
+  margin-bottom: 91px;
 }
 
 .main-wrapper .info{
-  width: 475px;
+  width: 485px;
+  margin-left: -3px;
 }
 
 .main-wrapper .info-map{
-  width: 580px;
+  width: 565px;
 }
 
 .main-wrapper h2{
   position: relative;
+  margin-bottom: 43px;
 
   font-family: 'Gilroy', Arial, sans-serif;
   font-size: 47px;
@@ -766,49 +808,68 @@ ul.basket-navigation li{
   letter-spacing: 0.21px;
 }
 
+.info h2{
+  letter-spacing: 0.4px;
+}
+
+
 .info h2::before{
   display: block;
   position: absolute;
   width: 80px;
   height: 7px;
 
-  top: -50px;
+  top: -52px;
 
   background-color: #000000;
   content: "";
 }
 
 .main-wrapper p{
+  letter-spacing: 0.14px;
   color: #464646;
+
+  margin-bottom: 30px;
+}
+
+.info p:nth-child(3){
+  letter-spacing: -0.15px;
 }
 
 .info .delivery-list{
-  font-family: 'Gilroy', Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 40px;
+
   list-style: none;
   padding: 0;
-  margin-top: 80px;
-  margin-bottom: 60px;
+  margin-top: 65px;
+  margin-bottom: 63px;
 }
 
 .delivery-list li{
   position: relative;
-  padding-left: 35px;
+  padding-left: 37px;
+
+  font-family: 'Gilroy', Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 40px;
 }
 
 .delivery-list li::before{
   display: block;
   position: absolute;
   top: 40%;
-  left: 5px;
+  left: 2px;
   width: 8px;
   height: 8px;
   border: 2px solid #e5e5e5;
   border-radius: 50%;
   background-color: #ffffff;
   content: "";
+}
+
+.info a.button{
+  width: 265px;
+  margin-left: 24px;
 }
 
 .info a.button::before{
@@ -823,9 +884,13 @@ ul.basket-navigation li{
 
 .info-map .map-link{
   display: block;
-  margin-top: 25px;
+  margin-top: 38px;
   margin-bottom: 70px;
   background: none;
+}
+
+.info-map h2{
+  letter-spacing: 0.8px;
 }
 
 .info-map h2::before{
@@ -834,7 +899,8 @@ ul.basket-navigation li{
   width: 80px;
   height: 7px;
 
-  top: -50px;
+  top: -52px;
+  left: 2px;
 
   background-color: #000000;
   content: "";
